fix spacing

--- a/home/locmai/.config/waybar/style.css
+++ b/home/locmai/.config/waybar/style.css
@@ -3,7 +3,6 @@
 * {
   border: none;
   font-family: 'FiraCode';
-  letter-spacing: 3px;
 }
 
 window.bottom_bar#waybar {
